sk-cli/src/xray/view/tests/snapshots/skctl__xray__view__tests__view_test__itest__render_large_event_list_event_selected@80.80.snap
---
source: sk-cli/src/xray/view/tests/view_test.rs
expression: cf
---
CompletedFrame {
    buffer: Buffer {
        area: Rect { x: 0, y: 0, width: 80, height: 20 },
        content: [
            "┌──────────────────────────────────────────────────────────────────────────────┐",
            "│>> 00:19:53 (1 applied/0 deleted)                                             │",
            "│  + dsb/compose-post-service                                                  │",
            "│   00:19:54 (1 applied/0 deleted)                                             │",
            "│   00:19:55 (1 applied/0 deleted)                                             │",
            "│   00:19:56 (1 applied/0 deleted)                                             │",
            "│   00:19:57 (1 applied/0 deleted)                                             │",
            "│   00:19:58 (1 applied/0 deleted)                                             │",
            "│   00:19:59 (1 applied/0 deleted)                                             │",
            "│   00:21:04 (1 applied/0 deleted)                                             │",
            "│   00:21:05 (27 applied/0 deleted)                      1 error/0 warnings    │",
            "│                                                                              │",
            "│                                                                              │",
            "│                                                                              │",
            "└──────────────────────────────────────────────────────────────────────────────┘",
            "┌──────────────────────────────────────────────────────────────────────────────┐",
            "│Hello SimKube!                                                                │",
            "│Use arrows to navigate, space to select, 'q' to quit.                         │",
            "│                                                                              │",
            "└──────────────────────────────────────────────────────────────────────────────┘",
        ],
        styles: [
            x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
            x: 79, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: ITALIC,
            x: 29, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 56, y: 10, fg: White, bg: Red, underline: Reset, modifier: NONE,
            x: 79, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 0, y: 15, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        ]
    },
    area: Rect {
        x: 0,
        y: 0,
        width: 80,
        height: 20,
    },
    count: 0,
}
